# node-gstreamer-split-wav

./: CMakeLists.txt  README.md  binding.gyp  package.json
source/: common.h  gstsplitwav.cc  gstsplitwav.h
